[package]
name = "bitwarden-data"
version = "0.1.0"
edition = "2021"
authors = ["Nils Feierabend <mztikk@outlook.de>"]
repository = "https://github.com/mztikk/bitwarden-data"
license = "MIT"
description = "library which contains structs for exported bitwarden data"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
